--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,15 +5,38 @@ header {
 	justify-content: space-around;
 	padding-top: 3vh;
 	padding-bottom: 3vh;
+	overflow: hidden;
 }
 
 footer {
 	background-color: rgb(22, 20, 20);
-	height: 40vh;
+	height: 25vh;
+}
+
+header a:hover {
+	text-decoration: none;
+	color: grey;
+}
+
+.first-section {
+	margin-top: 2vh;
 }
 
 .header-items {
 	color: white;
+	text-decoration: none;
+}
+
+.header-items:hover {
+	color: grey;
+}
+
+.card-deck {
+	margin-top: 5vh;
+}
+
+#home-button {
+	background-color: green;
 }
 
 #about-me {
@@ -25,10 +48,16 @@ footer {
 	font-size: 15vh;
 }
 
+#about-me-para {
+	margin-top: 300px;
+}
+
 #avatar {
-	height: 35vh;
-	width: 30vh;
+	height: 50%;
+	width: 50%;
 	border-radius: 100%;
+	margin-left: 25%;
+	margin-top: 7%;
 }
 
 #featured-project {
@@ -36,12 +65,63 @@ footer {
 	height: 100vh;
 }
 
+#featured-project h1 {
+	margin-bottom: 5vh;
+}
+
+#right-side-featured-project {
+	background-color: black;
+	padding-bottom: 8vh;
+}
+
 #other-projects {
 	background-color: hotpink;
 	height: 100vh;
 }
 
+#my-work-title {
+	margin-top: 5vh;
+	padding-bottom: 2px;
+	border-bottom: solid black 2px;
+}
+
 #contact-me {
 	background-color: black;
-	height: 60vh;
+	height: 75vh;
+}
+
+#contact-info-title {
+	margin-top: 5vh;
+	padding-bottom: 2px;
+	border-bottom: solid rgb(177, 139, 139) 2px;
+}
+
+#contact-info {
+	margin-top: 5vh;
+	margin-left: 50px;
+	margin-right: 50px;
+}
+
+#resume-title h4 {
+	padding-top: 3vh;
+	padding-bottom: 2px;
+	border-bottom: solid rgb(177, 139, 139) 1px;
+}
+
+#trivia-image {
+	height: fit-content;
+	width: 100%;
+}
+
+#jeopardy-screenshot {
+	height: 75%;
+	width: 100%;
+}
+
+#contact-info a:hover {
+	text-decoration: none;
+}
+
+#resume-link:hover {
+	text-decoration: none;
 }
